# company_ict401

./: README.md  pyproject.toml  requirements.txt
src/company/: __main__.py  cli.py  data.py  models.py  utils.py
tests/company/: test_cli.py
