[project]
name = "company"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ulyanova Irina", email = "irina.dest@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
]

[project.scripts]
company = "company.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
]
